--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     %sveltekit.head%
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
